# planning

./: .dockerignore  .env.example  .gitignore  CC.html  CC.tex  CC_mermaid.html  CHANGELOG.md  CLAUDE.md  Dockerfile  README.md  architecture_v2.html  azure_evaluation.md  cahier.txt  cahier_des_charges.tex  chapter0_intro.tex  chapter1.tex  chapter2.tex  chapter3.tex  chapter4.tex  chapter5.tex  chapter6.tex  chapter7.tex  chapter_conclusion.tex  checklist.md  checklist_week2-3.md  conftest.py  content.tex  debug_global_macro.py  debug_gsh09.py  debug_rawcode.py  docker-compose.yml  globalARCH.html  main.py  populate_dummy_data.py  pyproject.toml  setup_viz_data.py  todo.md  trello_kanban.md  trello_kanban.md.resolved
.claude/: settings.json  settings.local.json
.github/: dependabot.yml
.review/: final_audit.md  flagged.md
backend/: .env.example  .gitignore  README.md  codara_api.db-shm  codara_api.db-wal  conftest.py  requirements.txt  test_simple.sas
data/: analytics.duckdb
docs/: AUDIT_REPORT.md  AUDIT_REPORT_V2.md  AUDIT_REPORT_V3.md  DEMO_SCENARIOS.md  METRICS.md  README.md  ablation_results.md  architecture_diagram_detailed.html  architecture_v2.html  cahier_des_charges.tex  defense_presentation.html  defense_qa.md  explanation.md  pipeline_walkthrough.html  sommaire.html  tables_preview.html  trello_kanban.md  trello_kanban.md.resolved  understanding_guide.html  verification_deep_dive.html
frontend/: Dockerfile  README.md  index.html  nginx.conf.template  package-lock.json  package.json
infra/: Dockerfile  README.md  azure_setup.sh  backend-volume-mount.yaml  entrypoint.sh  (+4 more)
(+1060 files in other folders)
